# autoCv

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/marco/: __init__.py  cli.py  extractor.py  llm.py  renderer.py  schema.py
template/: converted_profile.docx  corporate.docx
